--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,5 +10,10 @@
         android:name="com.icbt.magula.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/nav_registration"
+        android:name="com.icbt.magula.ui.home.registration.RegistrationFragment"
+        android:label="@string/menu_registration"
+        tools:layout="@layout/registration_fragment" />
 
 </navigation>
