--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,11 @@
             android:id="@+id/nav_registration"
             android:icon="@drawable/ic_menu_registration"
             android:title="@string/menu_registration" />
+
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_menu_login"
+            android:title="@string/menu_login"/>
     </group>
 
 </menu>
