--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,8 +12,12 @@
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/nav_registration"
-        android:name="com.icbt.magula.ui.home.registration.RegistrationFragment"
+        android:name="com.icbt.magula.ui.registration.RegistrationFragment"
         android:label="@string/menu_registration"
         tools:layout="@layout/registration_fragment" />
+    <fragment
+        android:id="@+id/nav_login"
+        android:name="com.icbt.magula.ui.login.LoginFragment"
+        android:label="@string/menu_login" />
 
 </navigation>
