--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_registration"
+            android:id="@+id/nav_choose_account"
             android:icon="@drawable/ic_menu_registration"
             android:title="@string/menu_registration" />
 
