--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,13 +11,14 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/nav_registration"
-        android:name="com.icbt.magula.ui.registration.RegistrationFragment"
-        android:label="@string/menu_registration"
-        tools:layout="@layout/registration_fragment" />
-    <fragment
         android:id="@+id/nav_login"
         android:name="com.icbt.magula.ui.login.LoginFragment"
-        android:label="@string/menu_login" />
+        android:label="@string/menu_login"
+        tools:layout="@layout/login_fragment"/>
+    <fragment
+        android:id="@+id/nav_choose_account"
+        android:name="com.icbt.magula.ui.choose_account.ChooseAccountFragment"
+        android:label="@string/menu_registration"
+        tools:layout="@layout/choose_account_fragment"/>
 
 </navigation>
