--- a/app/src/main/res/layout/service_account_fragment.xml
+++ b/app/src/main/res/layout/service_account_fragment.xml
@@ -8,6 +8,10 @@
         <variable
             name="serviceAccountViewModel"
             type="com.icbt.magula.ui.service_account.ServiceAccountViewModel" />
+
+        <variable
+            name="serviceAccountFragment"
+            type="com.icbt.magula.ui.service_account.ServiceAccountFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,6 +42,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/hotel_name_edit_text"
                 android:layout_width="200dp"
                 android:layout_height="match_parent" />
 
@@ -47,12 +52,12 @@
             android:id="@+id/address_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/content_description_address"
             android:src="@drawable/ic_address"
             app:layout_constraintBottom_toBottomOf="@id/hotel_address_text_input_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/hotel_address_text_input_layout"
-            app:tint="@color/teal_500"
-            android:contentDescription="@string/content_description_address" />
+            app:tint="@color/teal_500" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/hotel_address_text_input_layout"
@@ -67,6 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/hotel_name_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/hotel_address_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
@@ -85,6 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/hotel_address_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/hotel_mobile_number_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone" />
@@ -94,23 +101,23 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/content_description_mobile_number"
             app:layout_constraintBottom_toBottomOf="@+id/contact_number_text_input_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/contact_number_text_input_layout"
             app:srcCompat="@drawable/ic_contact_number"
-            app:tint="@color/teal_500"
-            android:contentDescription="@string/content_description_mobile_number" />
+            app:tint="@color/teal_500" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/content_description_price"
             app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contact_number_text_input_layout"
             app:srcCompat="@drawable/ic_price"
-            app:tint="@color/teal_500"
-            android:contentDescription="@string/content_description_price" />
+            app:tint="@color/teal_500" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout3"
@@ -124,6 +131,7 @@
             app:layout_constraintTop_toBottomOf="@+id/contact_number_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/hotel_price_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -144,10 +152,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:onClick="@{() -> serviceAccountFragment.onCancel()}"
             android:text="@string/cancel_button"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
             app:layout_constraintTop_toTopOf="@+id/button3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
