--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,5 +49,10 @@
             app:popUpTo="@id/nav_home"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_plan"
+        android:name="com.icbt.magula.ui.plan.PlanFragment"
+        android:label="@string/menu_plan"
+        tools:layout="@layout/plan_fragment" />
 
 </navigation>
