--- a/app/src/main/res/layout/customer_account_fragment.xml
+++ b/app/src/main/res/layout/customer_account_fragment.xml
@@ -79,7 +79,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textImeMultiLine" />
+                        android:inputType="textEmailAddress" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
