--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -25,6 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" >
 
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -35,12 +36,13 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:hint="@string/username"
+                    android:hint="@string/email"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView2"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={loginViewModel.email}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -70,6 +72,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@={loginViewModel.password}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -88,6 +91,7 @@
                     android:contentDescription="@string/content_description_password" />
 
                 <Button
+                    android:onClick="@{loginViewModel::onCancelButtonClick}"
                     android:id="@+id/button5"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="0dp"
@@ -100,6 +104,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
 
                 <Button
+                    android:onClick="@{loginViewModel::onLoginButtonClick}"
                     android:id="@+id/button6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -109,9 +114,22 @@
                     app:layout_constraintStart_toEndOf="@+id/button5"
                     app:layout_constraintTop_toTopOf="@+id/button5" />
 
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+
 
 
 
